{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 16,
  "lineage": "081fc6dc-8b10-882c-85bb-6551a5df729a",
  "resources": [
    {
      "module": "module.lambda",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:495599733393:security-group/sg-0991492160fc262a3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0991492160fc262a3",
            "ingress": [],
            "name": "lambda-sg",
            "name_prefix": "",
            "owner_id": "495599733393",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0de0fc4baf635bf69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c2117f873c01cd5a",
            "arn": "arn:aws:ec2:ap-south-1:495599733393:elastic-ip/eipalloc-0c2117f873c01cd5a",
            "domain": "vpc",
            "id": "eipalloc-0c2117f873c01cd5a",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-203-235-219.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.203.235.219",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prakash"
            },
            "tags_all": {
              "Name": "prakash"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:495599733393:internet-gateway/igw-037503cb32a28a0af",
            "id": "igw-037503cb32a28a0af",
            "owner_id": "495599733393",
            "vpc_id": "vpc-0de0fc4baf635bf69"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c2117f873c01cd5a",
            "connectivity_type": "public",
            "id": "nat-094defcfc7b91ca05",
            "subnet_id": "subnet-08c66e1f701b66c94"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-037503cb32a28a0af",
            "id": "r-rtb-08948eacbc3e8de491080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08948eacbc3e8de49",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:495599733393:route-table/rtb-0d5edd561d65746e8",
            "id": "rtb-0d5edd561d65746e8",
            "owner_id": "495599733393",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private-route"
            },
            "tags_all": {
              "Name": "Private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de0fc4baf635bf69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:495599733393:route-table/rtb-0a9e6616b2273c362",
            "id": "rtb-0a9e6616b2273c362",
            "owner_id": "495599733393",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private-route"
            },
            "tags_all": {
              "Name": "Private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de0fc4baf635bf69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:495599733393:route-table/rtb-08948eacbc3e8de49",
            "id": "rtb-08948eacbc3e8de49",
            "owner_id": "495599733393",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Public-route"
            },
            "tags_all": {
              "Name": "Public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de0fc4baf635bf69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fca67f3991f478ef",
            "route_table_id": "rtb-0d5edd561d65746e8",
            "subnet_id": "subnet-002beedd294a54562"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3addd4c3e836fc1",
            "route_table_id": "rtb-0a9e6616b2273c362",
            "subnet_id": "subnet-0b08dcfd0ecca4f92"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022b2993d69dd3ba7",
            "route_table_id": "rtb-08948eacbc3e8de49",
            "subnet_id": "subnet-08c66e1f701b66c94"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093c98a6c512a8c81",
            "route_table_id": "rtb-08948eacbc3e8de49",
            "subnet_id": "subnet-041d6a2e4d2a41f06"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:495599733393:subnet/subnet-002beedd294a54562",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002beedd294a54562",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495599733393",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet_0"
            },
            "tags_all": {
              "Name": "private-subnet_0"
            },
            "vpc_id": "vpc-0de0fc4baf635bf69"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:495599733393:subnet/subnet-0b08dcfd0ecca4f92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b08dcfd0ecca4f92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495599733393",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet_1"
            },
            "tags_all": {
              "Name": "private-subnet_1"
            },
            "vpc_id": "vpc-0de0fc4baf635bf69"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:495599733393:subnet/subnet-08c66e1f701b66c94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c66e1f701b66c94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495599733393",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet_0"
            },
            "tags_all": {
              "Name": "public-subnet_0"
            },
            "vpc_id": "vpc-0de0fc4baf635bf69"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:495599733393:subnet/subnet-041d6a2e4d2a41f06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041d6a2e4d2a41f06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495599733393",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet_1"
            },
            "tags_all": {
              "Name": "public-subnet_1"
            },
            "vpc_id": "vpc-0de0fc4baf635bf69"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:495599733393:vpc/vpc-0de0fc4baf635bf69",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e6d43bf3c9d7562a",
            "default_route_table_id": "rtb-0e6e51e8c631de0d9",
            "default_security_group_id": "sg-03a8a4761bff64b9f",
            "dhcp_options_id": "dopt-005e4a9c6eddd16e1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0de0fc4baf635bf69",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e6e51e8c631de0d9",
            "owner_id": "495599733393",
            "tags": {
              "Name": "Main"
            },
            "tags_all": {
              "Name": "Main"
            }
          }
        }
      ]
    }
  ]
}